--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,6 @@ MANIFEST
 
 PyInstaller
 
-Usually these files are written by a python script from a template
-
-before PyInstaller builds the exe, so as to inject date/other infos into it.
-
 *.manifest
 *.spec
 
@@ -72,3 +68,7 @@ venv.bak/
 VS Code settings
 
 .vscode/
+
+Ignore local leaderboard data (optional, supaya data pemain lokal tidak ikut ke-upload)
+
+leaderboard.json
